<resources>
    <string name="app_name">EventA</string>
    <string name="no_place">Internet</string>
    <string name="physical_place">Has address</string>
    <string name="location">Location</string>
    <string name="no_city">None</string>
    <string name="warning_invalid_login">Invalid</string>
    <string name="warning_google_signin_failed">Unable to login</string>
    <string name="warning_failed_to_change_data">Failed to change data</string>
    <string name="warning_verificate_account">Please verificate your account\nLetter sent to your email</string>
    <string name="warning_email">Incorrect email</string>
    <string name="warning_name">Incorrect name</string>
    <string name="warning_birth">Incorrect date</string>
    <string name="warning_age_limit">You must be at least 14 for registration</string>
    <string name="warning_phone">Incorrect phone</string>
    <string name="warning_phone_size">At least 11 digits</string>
    <string name="warning_password">Incorrect password</string>
    <string name="warning_password_size">Password must be at least 8 symbols</string>
    <string name="warning_passwords_match">Passwords not the same</string>
    <string name="warning_city">Incorrect city</string>
    <string name="warning_registration_failed">Registration failed</string>
    <string name="warning_min_age">At least 14</string>
    <string name="warning_min_participants">At least 1 user</string>
    <string name="warning_required">Required</string>
    <string name="organised">Organised</string>
    <string name="followed">Followed</string>
    <string name="empty_list">No events to show you</string>
    <string name="event_deleted">Event was deleted</string>
    <string name="event_not_deleted">Failed to delete the event</string>
    <string name="event_delete_confirm">Do you want to delete the event -\n"%1$s"?</string>
    <string name="google_auth_text">Or use google account</string>
    <string name="verification_letter_resend">Letter was sent again</string>
    <string name="event_created">Event was created</string>
    <string name="event_edited">Event was changed</string>
    <string name="event_created_error">Failed to create a new event</string>
    <string name="event_edited_error">Failed to change an event</string>
    <string name="participants_list">Participants</string>
    <string name="kick_participant">Kick %1$s from the event?</string>
    <string name="participant_kicked">User was kicked</string>
    <string name="failed_to_kick_participant">Failed to kick the participant</string>
    <string name="birth">Date of birth</string>
    <string name="today">Today</string>
    <string name="leave_a_request">This event is private. Leave a request to participate.</string>
    <string name="requests">Requests</string>
    <string name="requests_list">Requests list</string>
    <string name="add_participant">Add %1$s to the event?</string>
    <string name="participant_added">User was added</string>
    <string name="failed_to_add_participant">Failed to add the participant</string>
    <string name="title_activity_splashscreen" translatable="false">FullscreenActivity</string>
    <string name="profile">Profile</string>
    <string name="all_events">Search</string>
    <string name="my_events">My events</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="city">City</string>
    <string name="desc">Description</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="tell_about_yourself">Tell us about yourself</string>
    <string name="email">Email</string>
    <string name="register">Registration</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="invalid_login_or_password">Invalid login or password</string>
    <string name="log_in">Log in</string>
    <string name="send_again">Send again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_up">Sign up</string>
    <string name="unsign">Unsign</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="organisator">Organisator - %1$s</string>
    <string name="organisator_phone">Phone - %1$s</string>
    <string name="organisator_email">Email - %1$s</string>
    <string name="event_title">Event title</string>
    <string name="age">Age</string>
    <string name="participants">Participants</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="public_event">Public event</string>
    <string name="show_my_email">Show my email</string>
    <string name="show_my_phone">Show my phone</string>
    <string name="edit_event">Edit the event</string>
    <string name="add_event">Create new event</string>
    <string name="pick_date">Event date</string>
    <string name="pick_time">Event time of start</string>
    <string name="global">Internet</string>
    <string name="optional">Optional</string>


</resources>